--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.3.40'
     apply from: 'version.gradle'
     ext.kotlin_version = '1.3.31'
     ext.router_version = '1.6.3'
     repositories {
         addRepos(repositories)
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
