--- a/version.gradle
+++ b/version.gradle
@@ -23,7 +23,7 @@ ext {
             appcompat            : "1.0.2",
             constraintlayout     : "1.1.3",
             palette              : "1.0.0",
-            core_ktx             : "1.0.2",
+            core_ktx             : '1.0.2',
             androidSupport       : "28.0.0",
 
             retrofit2            : "2.5.0",
