--- a/libraryframework/build.gradle
+++ b/libraryframework/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion rootProject.ext.android["compileSdkVersion"]
@@ -40,6 +40,8 @@ dependencies {
 
     implementation rootProject.ext.dependencies["kotlin_stdlib_jdk7"]
     implementation rootProject.ext.dependencies["core_ktx"]
+    implementation rootProject.ext.dependencies["appcompat"]
+
     implementation project(":libraryCore")
 
 }
