--- a/libraryCore/build.gradle
+++ b/libraryCore/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation rootProject.ext.dependencies["appcompat"]
     implementation rootProject.ext.dependencies["lifecycle_extensions"]
     implementation rootProject.ext.dependencies["palette"]
+    implementation rootProject.ext.dependencies["material"]
 
     implementation rootProject.ext.dependencies["rxjava2"]
 
