--- a/libraryframework/build.gradle
+++ b/libraryframework/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     testImplementation rootProject.ext.dependencies["junit"]
+    testImplementation rootProject.ext.dependencies["runner"]
+    testImplementation rootProject.ext.dependencies["robolectric"]
     androidTestImplementation rootProject.ext.dependencies["runner"]
     androidTestImplementation rootProject.ext.dependencies["espresso_core"]
 
