--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,9 +63,11 @@ dependencies {
     implementation rootProject.ext.dependencies["core_ktx"]
     implementation rootProject.ext.dependencies["constraintlayout"]
 
+    //rxjava
     implementation rootProject.ext.dependencies["rxjava2"]
     implementation rootProject.ext.dependencies["rxandroid2"]
     implementation rootProject.ext.dependencies["rxkotlin"]
+
     implementation project(':libraryCore')
     implementation project(':libraryframework')
 
