--- a/libraryframework/build.gradle
+++ b/libraryframework/build.gradle
@@ -34,14 +34,20 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    //test
     testImplementation rootProject.ext.dependencies["junit"]
     testImplementation rootProject.ext.dependencies["runner"]
+    testImplementation rootProject.ext.dependencies["test_ext"]
+    testImplementation rootProject.ext.dependencies["test_rules"]
     testImplementation rootProject.ext.dependencies["robolectric"]
     androidTestImplementation rootProject.ext.dependencies["runner"]
     androidTestImplementation rootProject.ext.dependencies["espresso_core"]
 
+    //kotlin
     implementation rootProject.ext.dependencies["kotlin_stdlib_jdk7"]
     implementation rootProject.ext.dependencies["core_ktx"]
+
+    //google
     implementation rootProject.ext.dependencies["appcompat"]
 
     implementation project(":libraryCore")
