将网络等非架构模块移除Core层

--- a/app/src/main/assets/services/config
+++ b/app/src/main/assets/services/config
@@ -1,1 +1,1 @@
-com.themone.core.IAppEnvironment:com.theone.mvvm.AppEnvironment
+com.theone.framework.http.IAppEnvironment:com.theone.mvvm.AppEnvironment
