--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ android {
         versionCode rootProject.ext.android["versionCode"]
         versionName rootProject.ext.android["versionName"]
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         debug {
@@ -46,35 +47,43 @@ android {
             buildConfigField 'String', 'PRODUCT_FLAVORS', '"online"'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
-    //kotlin
-    implementation rootProject.ext.dependencies["kotlin_stdlib_jdk7"]
-    implementation rootProject.ext.dependencies["kotlinx_coroutines_core"]
-    implementation rootProject.ext.dependencies["kotlinx_coroutines_android"]
-
-    implementation rootProject.ext.dependencies["appcompat"]
-    implementation rootProject.ext.dependencies["core_ktx"]
-    implementation rootProject.ext.dependencies["constraintlayout"]
-
-    //rxjava
-    implementation rootProject.ext.dependencies["rxjava2"]
-    implementation rootProject.ext.dependencies["rxandroid2"]
-    implementation rootProject.ext.dependencies["rxkotlin"]
+    androidTestImplementation 'androidx.test:runner:1.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation project(':libraryCore')
     implementation project(':libraryframework')
 
+    //kotlin
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${rootProject.ext.version["kotlin_stdlib_jdk7"]}"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${rootProject.ext.version["kotlinx_coroutines"]}"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:${rootProject.ext.version["kotlinx_coroutines"]}"
+
+    implementation "androidx.appcompat:appcompat:${rootProject.ext.version["appcompat"]}"
+    implementation "androidx.core:core-ktx:${rootProject.ext.version["core_ktx"]}"
+    implementation "androidx.constraintlayout:constraintlayout:${rootProject.ext.version["constraintlayout"]}"
+
+    //rxjava
+    implementation "io.reactivex.rxjava3:rxjava:${rootProject.ext.version["rxjava"]}"
+    implementation "io.reactivex.rxjava3:rxandroid:${rootProject.ext.version["rxandroid"]}"
+    implementation "io.reactivex.rxjava3:rxkotlin:${rootProject.ext.version["rxkotlin"]}"
+
     //network
-    implementation rootProject.ext.dependencies["okhttp3"]
-    implementation rootProject.ext.dependencies["retrofit2"]
-    implementation rootProject.ext.dependencies["retrofit2:converter_gson"]
-    implementation rootProject.ext.dependencies["retrofit2:adapter_rxjava2"]
-    implementation rootProject.ext.dependencies["logging_interceptor"]
+    implementation "com.squareup.okhttp3:okhttp:${rootProject.ext.version["okhttp3"]}"
+    implementation "com.squareup.okhttp3:logging-interceptor:${rootProject.ext.version["okhttp3"]}"
+    implementation "com.squareup.retrofit2:retrofit:${rootProject.ext.version["retrofit2"]}"
+    implementation "com.squareup.retrofit2:converter-gson:${rootProject.ext.version["retrofit2"]}"
+    implementation "com.squareup.retrofit2:adapter-rxjava3:${rootProject.ext.version["retrofit2"]}"
 }
