--- a/libraryCore/build.gradle
+++ b/libraryCore/build.gradle
@@ -8,8 +8,7 @@ android {
         minSdkVersion rootProject.ext.android["minSdkVersion"]
         targetSdkVersion rootProject.ext.android["targetSdkVersion"]
 
-        testInstrumentationRunner rootProject.ext.dependencies["AndroidJUnitRunner"]
-
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -27,29 +26,24 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    testImplementation rootProject.ext.dependencies["junit"]
-    androidTestImplementation rootProject.ext.dependencies["runner"]
-    androidTestImplementation rootProject.ext.dependencies["espresso_core"]
+    testImplementation "junit:junit:4.12"
+    testImplementation "androidx.test:runner:1.3.0"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.3.0"
 
-    implementation rootProject.ext.dependencies["kotlin_stdlib_jdk7"]
-    implementation rootProject.ext.dependencies["appcompat"]
-    implementation rootProject.ext.dependencies["lifecycle_extensions"]
-    implementation rootProject.ext.dependencies["palette"]
-    implementation rootProject.ext.dependencies["material"]
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${rootProject.ext.version["kotlin_stdlib_jdk7"]}"
+    implementation "androidx.appcompat:appcompat:${rootProject.ext.version["appcompat"]}"
+    implementation "androidx.lifecycle:lifecycle-extensions:${rootProject.ext.version["lifecycle_extensions"]}"
+    implementation "androidx.palette:palette-ktx:${rootProject.ext.version["palette"]}"
+    implementation "androidx.core:core-ktx:${rootProject.ext.version["core_ktx"]}"
 
-    implementation rootProject.ext.dependencies["rxjava2"]
-
-    //network
-    implementation rootProject.ext.dependencies["okhttp3"]
-    implementation rootProject.ext.dependencies["logging_interceptor"]
-    implementation rootProject.ext.dependencies["retrofit2"]
-    implementation rootProject.ext.dependencies["retrofit2:converter_gson"]
-    implementation rootProject.ext.dependencies["retrofit2:adapter_rxjava2"]
+    implementation "io.reactivex.rxjava3:rxjava:${rootProject.ext.version["rxjava"]}"
 
 }
