--- a/libraryframework/build.gradle
+++ b/libraryframework/build.gradle
@@ -9,8 +9,7 @@ android {
         minSdkVersion rootProject.ext.android["minSdkVersion"]
         targetSdkVersion rootProject.ext.android["targetSdkVersion"]
 
-        testInstrumentationRunner rootProject.ext.dependencies["AndroidJUnitRunner"]
-
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -28,27 +27,40 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     //test
-    testImplementation rootProject.ext.dependencies["junit"]
-    testImplementation rootProject.ext.dependencies["runner"]
-    testImplementation rootProject.ext.dependencies["test_ext"]
-    testImplementation rootProject.ext.dependencies["test_rules"]
-    testImplementation rootProject.ext.dependencies["robolectric"]
-    androidTestImplementation rootProject.ext.dependencies["runner"]
-    androidTestImplementation rootProject.ext.dependencies["espresso_core"]
+    testImplementation "junit:junit:4.12"
+    testImplementation "androidx.test:runner:1.3.0"
+    testImplementation "androidx.test.ext:junit:1.1.2"
+    testImplementation "androidx.test:rules:1.3.0"
+    testImplementation "org.robolectric:robolectric:4.2"
+//    androidTestImplementation rootProject.ext.dependencies["runner"]
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.3.0"
 
     //kotlin
-    implementation rootProject.ext.dependencies["kotlin_stdlib_jdk7"]
-    implementation rootProject.ext.dependencies["core_ktx"]
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${rootProject.ext.version["kotlin_stdlib_jdk7"]}"
+    implementation "androidx.core:core-ktx:${rootProject.ext.version["core_ktx"]}"
 
     //google
-    implementation rootProject.ext.dependencies["appcompat"]
+    implementation "androidx.appcompat:appcompat:${rootProject.ext.version["appcompat"]}"
+    //bottomsheet
+    implementation "com.google.android.material:material:${rootProject.ext.version["material"]}"
+
+    implementation "io.reactivex.rxjava3:rxjava:${rootProject.ext.version["rxjava"]}"
+
+    //network
+    implementation "com.squareup.okhttp3:okhttp:${rootProject.ext.version["okhttp3"]}"
+    implementation "com.squareup.okhttp3:logging-interceptor:${rootProject.ext.version["okhttp3"]}"
+    implementation "com.squareup.retrofit2:retrofit:${rootProject.ext.version["retrofit2"]}"
+    implementation "com.squareup.retrofit2:converter-gson:${rootProject.ext.version["retrofit2"]}"
+    implementation "com.squareup.retrofit2:adapter-rxjava3:${rootProject.ext.version["retrofit2"]}"
 
     implementation project(":libraryCore")
 
