--- a/version.gradle
+++ b/version.gradle
@@ -10,9 +10,9 @@
 ext {
 
     android = [
-            compileSdkVersion: 28,
+            compileSdkVersion: 29,
             minSdkVersion    : 16,
-            targetSdkVersion : 28,
+            targetSdkVersion : 29,
             versionCode      : 1,
             versionName      : "0.0.1"
     ]
@@ -20,21 +20,23 @@ ext {
     version = [
             //support
             multidex             : "1.0.3",
-            support              : "1.0.0",
+            appcompat              : "1.2.0",
+            material              : "1.2.1",
+            core_ktx              : "1.3.1",
             palette              : "1.0.0",
-            constraintlayout     : "1.1.3",
+            constraintlayout     : "2.0.1",
 
-            retrofit2            : "2.5.0",
-            okhttp3              : "3.12.0",
+            retrofit2            : "2.9.0",
+            okhttp3              : "4.8.1",
             logging_interceptor  : "3.14.2",
-            rxandroid            : "2.1.1",
-            rxjava2              : "2.2.9",
-            rxkotlin             : "2.3.0",
+            rxjava               : "3.0.6",
+            rxkotlin             : "3.0.0",
+            rxandroid            : "3.0.0",
             espresso_core        : "3.0.2",
             constraint           : "1.1.3",
-            kotlin_stdlib_jdk7   : "1.2.71",
-            kotlinx_coroutines   : "1.1.1",
-            lifecycle_extensions : "2.0.0",
+            kotlin_stdlib_jdk7   : "1.3.72",
+            kotlinx_coroutines   : "1.3.7",
+            lifecycle_extensions : "2.2.0",
             recyclerview         : "1.0.0",
             //第三方
             bga_qrcode_zxing     : "1.3.6",
@@ -45,99 +47,13 @@ ext {
             calendarView         : "1.4.3",
 
             //动态权限
-            rxpermissions        : "0.10.2",
-            rxdownload3          : "1.3.4",
+            rxpermissions        : "0.12",
+            //rx下载
+            rxdownload           : "1.0.9",
 
             //react-native
             react_native         : "0.59.9",
     ]
-
-
-    dependencies = [
-
-            //kotlin
-            "kotlin_stdlib_jdk7"         : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${version["kotlin_stdlib_jdk7"]}",
-            "kotlinx_coroutines_core"    : "org.jetbrains.kotlinx:kotlinx-coroutines-core:${version["kotlinx_coroutines"]}",
-            "kotlinx_coroutines_android" : "org.jetbrains.kotlinx:kotlinx-coroutines-android:${version["kotlinx_coroutines"]}",
-
-            //support
-            "appcompat"                  : "androidx.appcompat:appcompat:${version["support"]}",
-            "core_ktx"                   : "androidx.core:core-ktx:${version["support"]}",
-            "material"                   : "com.google.android.material:material:${version["support"]}",
-
-            "palette"                    : "androidx.palette:palette-ktx:${version["palette"]}",
-            "constraintlayout"           : "androidx.constraintlayout:constraintlayout:${version["constraintlayout"]}",
-
-            //network
-            "retrofit2"                  : "com.squareup.retrofit2:retrofit:${version["retrofit2"]}",
-            "retrofit2:converter_gson"   : "com.squareup.retrofit2:converter-gson:${version["retrofit2"]}",
-            "retrofit2:adapter_rxjava2"  : "com.squareup.retrofit2:adapter-rxjava2:${version["retrofit2"]}",
-            "okhttp3"                    : "com.squareup.okhttp3:okhttp:${version["okhttp3"]}",
-            "logging_interceptor"        : "com.squareup.okhttp3:logging-interceptor:${version["okhttp3"]}",
-
-            //rx2
-            "rxandroid2"                 : "io.reactivex.rxjava2:rxandroid:${version["rxandroid"]}",
-            "rxjava2"                    : "io.reactivex.rxjava2:rxjava:${version["rxjava2"]}",
-            "rxkotlin"                   : "io.reactivex.rxjava2:rxkotlin:${version["rxkotlin"]}",
-
-            //lifecycle
-            "lifecycle_extensions"       : "androidx.lifecycle:lifecycle-extensions:${version["lifecycle_extensions"]}",
-
-            //test
-            "junit"                      : "junit:junit:4.12",
-            "androidJUnitRunner"         : "android.support.test.runner.AndroidJUnitRunner",
-            "runner"                     : 'androidx.test:runner:1.1.0',
-            "test_rules"                 : 'androidx.test:rules:1.1.0',
-            "test_ext"                   : 'androidx.test.ext:junit:1.1.0',
-            //robolectric 规避限定在 Android 模拟器或真机跑的问题，提供Android代码的运行环境
-            "robolectric"                : 'org.robolectric:robolectric:4.2',
-            //多 dex 模拟
-            "robolectric_multidex"       : 'org.robolectric:shadows-multidex:4.2',
-            "mockito"                    : 'org.mockito:mockito-core:2.24.5',
-            //用于 mock final 类或方法
-            "mockito_inline"             : 'org.mockito:mockito-inline:2.24.5',
-            //powermock
-            "powermock_junit4"           : 'org.powermock:powermock-module-junit4:2.0.2',
-            "powermock_junit4_rule"      : 'org.powermock:powermock-module-junit4-rule:2.0.2',
-            "powermock_mockito2"         : 'org.powermock:powermock-api-mockito2:2.0.2',
-            "powermock_xstream"          : 'org.powermock:powermock-classloading-xstream:2.0.2',
-            //测试 end
-
-            "espresso_core"              : 'androidx.test.espresso:espresso-core:3.1.0',
-            //二维码扫描
-            "bga_qrcode_zxing"           : "cn.theone:bga-qrcode-zxing:${version["bga_qrcode_zxing"]}",
-            //硬盘缓存
-            "disklrucache"               : "com.jakewharton:disklrucache:${version["disklrucache"]}",
-            //Room 数据库DB
-            "room_runtime"               : "androidx.room:room-runtime:${version["room"]}",
-            "room_compiler"              : "androidx.room:room-compiler:${version["room"]}",
-            "room_rxjava2"               : "androidx.room:room-rxjava2:${version["room"]}",
-            "room_testing"               : "androidx.room:room-testing:${version["room"]}",
-            //sopport
-            "recyclerview"               : "androidx.recyclerview:recyclerview:${version["recyclerview"]}",
-            //recyclerview adapter帮助类
-            "recyclerview_adapter_helper": "com.github.CymChad:BaseRecyclerViewAdapterHelper:${version["RecyclerAdapterHelper"]}",
-            "ChipsLayoutManager"         : "com.beloo.widget:ChipsLayoutManager:0.3.7@aar",
-            //WorkManager 后台
-            "work_runtime"               : "androidx.work:work-runtime:${version["work"]}",
-            "work_runtime_ktx"           : "androidx.work:work-runtime-ktx:${version["work"]}",
-            "work_testing"               : "androidx.work:work-testing:${version["work"]}",
-            //日历
-            "calendarView"               : "com.github.prolificinteractive:material-calendarview:${version["calendarView"]}",
-            //动态权限
-            "rxpermissions"              : "com.github.tbruyelle:rxpermissions:${version["rxpermissions"]}",
-            "rxdownload3"                : "zlc.season:rxdownload3:${version["rxdownload3"]}",
-
-            "multidex"                   : "com.android.support:multidex:${version["multidex"]}",
-
-    ]
-
-    def work = [:]
-    work.runtime = "androidx.work:work-runtime:$version.work"
-    work.testing = "androidx.work:work-testing:$version.work"
-    work.runtime_ktx = "androidx.work:work-runtime-ktx:$version.work"
-    dependencies.work = work
-
 }
 
 
