--- a/libraryCore/build.gradle
+++ b/libraryCore/build.gradle
@@ -38,12 +38,12 @@ dependencies {
     testImplementation "androidx.test:runner:1.3.0"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.3.0"
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${rootProject.ext.version["kotlin_stdlib_jdk7"]}"
-    implementation "androidx.appcompat:appcompat:${rootProject.ext.version["appcompat"]}"
-    implementation "androidx.lifecycle:lifecycle-extensions:${rootProject.ext.version["lifecycle_extensions"]}"
-    implementation "androidx.palette:palette-ktx:${rootProject.ext.version["palette"]}"
-    implementation "androidx.core:core-ktx:${rootProject.ext.version["core_ktx"]}"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${rootProject.ext.kotlin_stdlib_jdk7}"
+    implementation "androidx.appcompat:appcompat:${rootProject.ext.appcompat}"
+    implementation "androidx.lifecycle:lifecycle-extensions:${rootProject.ext.lifecycle_extensions}"
+    implementation "androidx.palette:palette-ktx:${rootProject.ext.palette}"
+    implementation "androidx.core:core-ktx:${rootProject.ext.core_ktx}"
 
-    implementation "io.reactivex.rxjava3:rxjava:${rootProject.ext.version["rxjava"]}"
+    implementation "io.reactivex.rxjava3:rxjava:${rootProject.ext.rxjava}"
 
 }
