--- a/libraryframework/build.gradle
+++ b/libraryframework/build.gradle
@@ -1,7 +1,8 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-
+//router
+apply plugin: 'com.chenenyu.router'
 android {
     compileSdkVersion rootProject.ext.android["compileSdkVersion"]
 
@@ -33,7 +34,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
 
     //test
     testImplementation "junit:junit:4.12"
@@ -45,22 +46,28 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-core:3.3.0"
 
     //kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${rootProject.ext.version["kotlin_stdlib_jdk7"]}"
-    implementation "androidx.core:core-ktx:${rootProject.ext.version["core_ktx"]}"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${rootProject.ext.kotlin_stdlib_jdk7}"
+    implementation "androidx.core:core-ktx:${rootProject.ext.core_ktx}"
 
     //google
-    implementation "androidx.appcompat:appcompat:${rootProject.ext.version["appcompat"]}"
+    implementation "androidx.appcompat:appcompat:${rootProject.ext.appcompat}"
     //bottomsheet
-    implementation "com.google.android.material:material:${rootProject.ext.version["material"]}"
+    implementation "com.google.android.material:material:${rootProject.ext.material}"
 
-    implementation "io.reactivex.rxjava3:rxjava:${rootProject.ext.version["rxjava"]}"
+    implementation "io.reactivex.rxjava3:rxjava:${rootProject.ext.rxjava}"
 
     //network
-    implementation "com.squareup.okhttp3:okhttp:${rootProject.ext.version["okhttp3"]}"
-    implementation "com.squareup.okhttp3:logging-interceptor:${rootProject.ext.version["okhttp3"]}"
-    implementation "com.squareup.retrofit2:retrofit:${rootProject.ext.version["retrofit2"]}"
-    implementation "com.squareup.retrofit2:converter-gson:${rootProject.ext.version["retrofit2"]}"
-    implementation "com.squareup.retrofit2:adapter-rxjava3:${rootProject.ext.version["retrofit2"]}"
+    api "com.squareup.okhttp3:okhttp:${rootProject.ext.okhttp3}"
+    api "com.squareup.okhttp3:logging-interceptor:${rootProject.ext.okhttp3}"
+    api "com.squareup.retrofit2:retrofit:${rootProject.ext.retrofit2}"
+    api "com.squareup.retrofit2:converter-gson:${rootProject.ext.retrofit2}"
+    api "com.squareup.retrofit2:adapter-rxjava3:${rootProject.ext.retrofit2}"
+    //加载图片
+    api "com.github.bumptech.glide:glide:${rootProject.ext.glide}"
+    kapt "com.github.bumptech.glide:compiler:${rootProject.ext.glide}"
+    api "com.github.bumptech.glide:okhttp3-integration:${rootProject.ext.glide}"
+    //高斯模糊
+    api "jp.wasabeef:glide-transformations:${rootProject.ext.glide_transformations}"
 
     implementation project(":libraryCore")
 
