--- a/version.gradle
+++ b/version.gradle
@@ -17,43 +17,45 @@ ext {
             versionName      : "0.0.1"
     ]
 
-    version = [
-            //support
-            multidex             : "1.0.3",
-            appcompat              : "1.2.0",
-            material              : "1.2.1",
-            core_ktx              : "1.3.1",
-            palette              : "1.0.0",
-            constraintlayout     : "2.0.1",
+    //support
+    multidex = "1.0.3"
+    appcompat = "1.2.0"
+    material = "1.2.1"
+    core_ktx = "1.3.1"
+    palette = "1.0.0"
+    constraintlayout = "2.0.1"
 
-            retrofit2            : "2.9.0",
-            okhttp3              : "4.8.1",
-            logging_interceptor  : "3.14.2",
-            rxjava               : "3.0.6",
-            rxkotlin             : "3.0.0",
-            rxandroid            : "3.0.0",
-            espresso_core        : "3.0.2",
-            constraint           : "1.1.3",
-            kotlin_stdlib_jdk7   : "1.3.72",
-            kotlinx_coroutines   : "1.3.7",
-            lifecycle_extensions : "2.2.0",
-            recyclerview         : "1.0.0",
-            //第三方
-            bga_qrcode_zxing     : "1.3.6",
-            disklrucache         : "2.0.2",
-            room                 : "2.0.0",
-            work                 : "2.0.0",
-            RecyclerAdapterHelper: "2.9.46",
-            calendarView         : "1.4.3",
+    retrofit2 = "2.9.0"
+    okhttp3 = "4.8.1"
+    glide = "4.11.0"
+    glide_transformations = "4.1.0"
+    logging_interceptor = "3.14.2"
+    rxjava = "3.0.6"
+    rxkotlin = "3.0.0"
+    rxandroid = "3.0.0"
+    espresso_core = "3.0.2"
+    constraint = "1.1.3"
+    kotlin_stdlib_jdk7 = "1.3.72"
+    kotlinx_coroutines = "1.3.7"
+    lifecycle_extensions = "2.2.0"
+    recyclerview = "1.0.0"
+    //第三方
+    bga_qrcode_zxing = "1.3.6"
+    disklrucache = "2.0.2"
+    room = "2.0.0"
+    work = "2.0.0"
+    RecyclerAdapterHelper = "2.9.46"
+    calendarView = "1.4.3"
+    multitype = "4.2.0"
+    titlebar = "6.0"
 
-            //动态权限
-            rxpermissions        : "0.12",
-            //rx下载
-            rxdownload           : "1.0.9",
+    //动态权限
+    rxpermissions = "0.12"
+    //rx下载
+    rxdownload = "1.0.9"
 
-            //react-native
-            react_native         : "0.59.9",
-    ]
+    //react-native
+    react_native = "0.59.9"
 }
 
 
