--- a/libraryframework/build.gradle
+++ b/libraryframework/build.gradle
@@ -23,7 +23,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
+    flavorDimensions "eye"
+    productFlavors {
+        qa {
+            dimension "eye"
+        }
+        online {
+            dimension "eye"
+        }
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
