--- a/libraryCore/build.gradle
+++ b/libraryCore/build.gradle
@@ -21,7 +21,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    flavorDimensions "mvvm"
+        /*flavorDimensions "mvvm"
     productFlavors {
         qa {
             dimension "mvvm"
@@ -29,7 +29,7 @@ android {
         online {
             dimension "mvvm"
         }
-    }
+    }*/
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
