--- a/libraryFramework/build.gradle
+++ b/libraryFramework/build.gradle
@@ -23,7 +23,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    flavorDimensions "mvvm"
+    /*flavorDimensions "mvvm"
     productFlavors {
         qa {
             dimension "mvvm"
@@ -31,7 +31,7 @@ android {
         online {
             dimension "mvvm"
         }
-    }
+    }*/
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
