--- a/libraryCore/build.gradle
+++ b/libraryCore/build.gradle
@@ -37,6 +37,7 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
+    namespace 'com.themone.core'
 }
 
 dependencies {
